--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "web3": "^1.7.4",
     "reactjs-social-login": "^2.6.2",
     "@react-oauth/google": "^0.8.0",
