--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
-  "root": true,
-  "extends": ["eslint-config-prettier", "plugin:prettier/recommended", "prettier"],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"]
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
+  }
 }
