--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@ant-design/icons": "^4.7.0",
     "@matt-block/react-recaptcha-v2": "^1.0.8",
     "@micro-zoe/micro-app": "^0.8.10",
-    "next-transpile-modules": "^10.0.0",
+    "@portkey/did-ui-react": "0.0.1-alpha.2.2",
+    "@react-oauth/google": "^0.8.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@sentry/nextjs": "^7.19.0",
     "@walletconnect/ethereum-provider": "^1.7.8",
@@ -32,6 +33,7 @@
     "antd": "^4.21.7",
     "apisauce": "^2.1.6",
     "axios-hooks": "^3.1.5",
+    "babel-loader": "^8.2.5",
     "bignumber.js": "^9.1.0",
     "clsx": "^1.2.1",
     "firebase": "^9.14.0",
@@ -41,33 +43,30 @@
     "next-babel-conditional-ssg-ssr": "https://github.com/Anthonyzou/next-babel-conditional-ssg-ssr.git#patch-1",
     "next-compose-plugins": "^2.2.1",
     "next-plugin-antd-less": "^1.8.0",
+    "next-transpile-modules": "^10.0.0",
     "next-with-less": "^2.0.5",
     "query-string": "^7.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^11.18.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "web3": "^1.7.4",
     "reactjs-social-login": "^2.6.2",
-    "@react-oauth/google": "^0.8.0",
-    "web3-core": "^1.7.4",
-    "@portkey/did-ui-react": "0.0.1-alpha.2.2",
-    "babel-loader": "^8.2.5"
+    "web3": "^1.7.4",
+    "web3-core": "^1.7.4"
   },
   "resolutions": {
     "@types/react": "18.0.14"
   },
   "devDependencies": {
-    "ts-loader": "^9.4.0",
-
     "@coinbase/wallet-sdk": "^3.3.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@next/bundle-analyzer": "^12.2.4",
     "@types/node": "18.0.1",
     "@types/react-dom": "18.0.5",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.30.4",
     "@typescript-eslint/parser": "^5.30.4",
     "eslint": "8.19.0",
@@ -84,6 +83,7 @@
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^26.0.0",
+    "ts-loader": "^9.4.0",
     "typescript": "4.7.4",
     "vconsole": "^3.14.6"
   },
