--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react": "18.0.14"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.1",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
